--- a/client/src/components/atomic/atoms/OrderForm/Select/SelectPayment.css
+++ b/client/src/components/atomic/atoms/OrderForm/Select/SelectPayment.css
@@ -1,4 +1,5 @@
 .select-payment{
+    font-family: 'Helvetica Neue Cyr Thin';
     padding: 12px 0 12px 18px;
     width: 342px;
     font-size: 18px;
