--- a/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
@@ -1,20 +1,22 @@
 .product-image img {
-    width: 360px;
+    width: 100%;
     height: 425px;
     object-fit: cover;
 }
 
+
 .product-image.main-page img {
-    width: 420px;
+    width: 100%;
     height: 470px;
     object-fit: cover;
 }
-.product-image.main-page{
-    width: max-content;
+
+.product-image.main-page {
+    width: auto;
 }
 
 @media (max-width: 1360px) {
-    .product-image.main-page img {
+    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
         width: 320px;
         height: 370px;
         object-fit: cover;
@@ -27,14 +29,29 @@
     }
 }
 
+@media (max-width: 1130px) {
+    .product-image.main-page {
+        display: flex;
+        justify-content: center;
+        /* width: 100%; */
+    }
+
+    .product-image.main-page img {
+        width: 280px;
+        height: 330px;
+        object-fit: cover;
+    }
+}
+
 @media (max-width:1490px) {
     .product-image img {
-        width: 300px;
+        width: 100%;
         height: 370px;
         object-fit: cover;
     }
-    .product-item{
-        width: 300px;
+
+    .product-item {
+        width: 95%;
     }
 }
 
@@ -44,23 +61,30 @@
         height: 310px;
         object-fit: cover;
     }
-    .product-item{
+
+    .product-item {
         width: 300px;
     }
 }
 
 
+@media (min-width:1920px) {
+    .product-image img{
+        height: 540px;
+    }
+}
 
 @media (max-width: 768px) {
     .product-image.main-page img {
         width: 100%;
         height: 200px;
     }
-    .product-item{
+
+    .product-item {
         width: 150px;
     }
 
-    .product-image img{
+    .product-image img {
         width: 100%;
         height: 200px;
     }
