--- a/client/src/components/atomic/molecules/OrderForm/DeliveryInfo/DeliveryInfo.css
+++ b/client/src/components/atomic/molecules/OrderForm/DeliveryInfo/DeliveryInfo.css
@@ -8,10 +8,20 @@
     width: 342px;
 }
 
-.delivery-info-selects .css-b62m3t-container .css-13cymwt-control{
+.delivery-info-selects .css-b62m3t-container .css-13cymwt-control, .delivery-info-profile-selects .css-b62m3t-container .css-13cymwt-control{
+    border-radius: 0;
     padding: 5px 0 5px 18px;
     width: 342px;
     font-size: 18px;
+    border: 1px solid;
+}
+
+.delivery-info-selects .css-b62m3t-container .css-13cymwt-control .css-1jqq78o-placeholder{
+    font-family: "Helvetica Neue Cyr Thin";
+}
+
+.css-1jqq78o-placeholder, .css-1dimb5e-singleValue{
+    font-family: "Helvetica Neue Cyr Thin";
 }
 
 .delivery-info-bottom-select{
