--- a/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
+++ b/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 42px;
     font-size: 21px;
 }
 
@@ -16,5 +16,8 @@
         height: 30px;
         padding: 6px;
         margin-left: 10px;
+    }
+    .promocode-form{
+        margin-top: 30px;
     }
 }
