--- a/client/src/components/atomic/molecules/QuantitySelector/QuantitySelector.css
+++ b/client/src/components/atomic/molecules/QuantitySelector/QuantitySelector.css
@@ -16,9 +16,10 @@
 
 @media (max-width: 768px) {
     .product-quantity-selector-container{
-        padding: 8px;
+        padding: 3px;
         width: 100px;
         margin-left: 20px;
         margin-top: 10px;
+        height: auto;
     }
 }
