--- a/client/src/components/atomic/molecules/UserProfileInfoForm/DeliveryInfo/DeliveryInfo.css
+++ b/client/src/components/atomic/molecules/UserProfileInfoForm/DeliveryInfo/DeliveryInfo.css
@@ -41,8 +41,8 @@
 }
 
 @media (max-width:768px) {
-    .delivery-info-bottom-select{
+    .register-order-form .delivery-info-bottom-select{
         margin-top: 0;
-        width: 342px;
+        width: 100%;
     }
 }
