--- a/client/src/components/atomic/organisms/productItem/ProductItem.css
+++ b/client/src/components/atomic/organisms/productItem/ProductItem.css
@@ -5,12 +5,13 @@
 }
 
 .product-item {
-    width: 360px;
+    width: 95%;
     margin-top: 30px;
     position: relative;
     margin-left: 24px;
-    
+
 }
+
 .product-item:first-child {
     margin-left: auto;
 }
@@ -31,19 +32,18 @@
     margin-top: 190px;
 }
 
-.product-page-container .product-page-data-block .heart-container{
-  
-        display: flex
-    ;
-        height: max-content;
-        justify-content: start;
-        align-items: center;
-        cursor: pointer;
-        position: absolute;
-        top: 15px;
-        left: -100px;
-        
-    
+.product-page-container .product-page-data-block .heart-container {
+
+    display: flex;
+    height: max-content;
+    justify-content: start;
+    align-items: center;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    left: -100px;
+
+
 }
 
 .product-page-data-block {
@@ -83,13 +83,13 @@
 .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page {
     margin: 0 auto;
     margin-top: 20px;
-    width: 240px;
+    width: 100%;
     height: max-content;
 }
 
 .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
-    width: 240px;
-    height: 250px;
+    width: 100%;
+    height: 300px;
 }
 
 .tab-menu-block {
@@ -106,7 +106,7 @@
     align-items: flex-start;
 }
 
-.recently-viewed-container h2{
+.recently-viewed-container h2 {
     margin-right: 20px;
 }
 
@@ -114,60 +114,113 @@
     color: red;
     font-size: 14px;
     margin-top: 8px;
-  }
-  
+}
 
+
+
+
+@media (max-width: 1443px) {
+    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
+        width: 320px;
+        height: 370px;
+        object-fit: cover;
+    }
+
+    .product-image.main-page {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 1260px) {
+    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+
+    .product-image.main-page {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+@media (min-width:1920px) and (max-width:3000px) {
+
+    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
+        height: 425px;
+    }
+
+}
 
 @media (max-width:1490px) {
+    .product-image img {
+        width: 100%;
+        height: 370px;
+        object-fit: cover;
+    }
 
-    .product-item{
-        width: 300px;
+    .product-item {
+        width: 95%;
     }
 }
 
 @media (max-width:1300px) {
-  
-    .product-item{
-        width: 250px;
+    .product-image img {
+        width: 100%;
+        height: 370px;
+        object-fit: cover;
+    }
+
+    .product-item {
+        width: 95%;
     }
 }
 
-@media (max-width: 768px) {
 
-    .product-page-container .product-page-data-block .heart-container{
+@media (max-width: 768px) {
+    .product-image img {
+        width: 100%;
+        height: 200px;
+    }
+    .product-page-container .product-page-data-block .heart-container {
         left: auto;
         top: 50px;
     }
 
-    .product-page-container{
+    .product-page-container {
         position: relative;
     }
-    .product-page-container .product-item{
+
+    .product-page-container .product-item {
         position: unset;
     }
-    
-    .product-page-container .heart-container{
+
+    .product-page-container .heart-container {
         position: absolute;
         top: 27px;
         right: 15px;
-        
+
     }
 
-    .product-page-container .product-discount{
+    .product-page-container .product-discount {
         top: 15px;
         left: 4px;
     }
 
-    .product-page-container .heart-container img{
+    .product-page-container .heart-container img {
         width: 24px;
         height: 24px;
     }
 
-    .product-page-container{
+    .product-page-container {
         margin-top: 120px;
     }
 
-    .product-item-view-head{
+    .product-item-view-head {
         font-size: 13px;
         margin-bottom: 7px;
         margin-left: 7px;
@@ -209,7 +262,7 @@
         align-items: center;
     }
 
-    .product-page-data-block .product-item .cost-addBtn .cost-block .price{
+    .product-page-data-block .product-item .cost-addBtn .cost-block .price {
         margin-top: 0;
     }
 
@@ -231,6 +284,7 @@
     }
 
     .product-page-data-block .product-item .size-list .size-button {
+        font-family: Arial, Helvetica, sans-serif;
         width: 30px;
         height: 30px;
         font-size: 12px;
@@ -239,23 +293,23 @@
         padding: inherit;
     }
 
-    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page{
+    .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page {
         width: 90%;
     }
 
-    .product-page-data-block .product-item .name-heart{
+    .product-page-data-block .product-item .name-heart {
         margin-top: 15px;
     }
 
-    .product-page-data-block .product-item .name-heart .name-block p{
+    .product-page-data-block .product-item .name-heart .name-block p {
         font-size: 18px;
     }
 
-    .tab-menu-block{
+    .tab-menu-block {
         margin-top: 30px;
     }
 
-    .recently-viewed-container h2{
+    .recently-viewed-container h2 {
         font-size: 13px
     }
 }
