--- a/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
+++ b/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
@@ -37,7 +37,7 @@
 
 .product-item.main-page {
   
-  width: 420px;
+  width: 100%;
   position: relative;
   margin-left: 24px;
   margin-top: 0;
@@ -60,6 +60,11 @@
   font-size: 18px;
   line-height: 40px;
 }
+
+
+/* .swiper-slide {
+  margin-left: 21px;
+} */
 
 .carousel-btn.left {
   left: 10px;
@@ -105,6 +110,12 @@
 @media (max-width: 1360px) {
   .product-item.main-page{
     width: 320px;
+  }
+}
+
+@media (max-width: 1130px) {
+  .product-item.main-page {
+      width: 280px;
   }
 }
 
