--- a/client/src/components/atomic/templates/Header/Header.css
+++ b/client/src/components/atomic/templates/Header/Header.css
@@ -41,19 +41,21 @@
     display: flex;
     justify-content: space-between;
     width: 20%;
+    font-size: 15px;
 }
 
 .left-elements-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 25%;
+    width: 20%;
 }
 
 .search-block {
     display: flex;
     justify-content: space-between;
-    width: 65%;
+    width: 100%;
+    margin-left: 41px;
 }
 
 @keyframes cart-bounce {
@@ -115,4 +117,10 @@
     /* .header{
         position: unset;
     } */
+}
+
+@media (max-width:1250px) {
+    .right-elements-block{
+        font-size: 12px;
+    }
 }
