--- a/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
+++ b/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
@@ -118,13 +118,19 @@
         color: white;
     }
 
-    .checkbox-block {
+    .checkbox-block{
+        height: 30px;
         font-size: 12px;
         margin-top: 21px;
     }
 
+    .checkbox-block div{
+        font-family: 'Helvetica Neue Cyr Thin';
+    }
+
     .mobile-create-order .total-price-block {
         font-size: 20px;
+
     }
     .register-order-form{
         width: 100%;
