--- a/client/src/components/atomic/templates/categoryList/CategoryList.css
+++ b/client/src/components/atomic/templates/categoryList/CategoryList.css
@@ -13,6 +13,7 @@
 
 .category-list {
     padding: 40px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.6);
 }
 
 .category-list h3 {
@@ -76,12 +77,12 @@
 @media (max-width:768px) {
 
     .category-list h3{
-        font-size: 14px;
+        font-size: 23px;
     }
 
     .category-list-ul a .name-category div {
         font-family: 'Helvetica Neue Cyr Thin';
-        font-size: 14px;
+        font-size: 21px;
     }
 
     .category-list-block {
