--- a/client/src/components/atomic/templates/productList/productList.css
+++ b/client/src/components/atomic/templates/productList/productList.css
@@ -6,7 +6,7 @@ a {
 
 .product-item-li {
     list-style-type: none;
-    width: max-content;
+    width: 33%;
 }
 
 .product-list {
@@ -37,6 +37,28 @@ a {
     margin-top: 30px;
 }
 
+.fade-enter {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  
+  .fade-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 300ms, transform 300ms;
+  }
+  
+  .fade-exit {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .fade-exit-active {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 300ms, transform 300ms;
+  }
+  
 
 .catalog-container {
     width: 95%;
@@ -65,6 +87,10 @@ font-family: 'Helvetica Neue Cyr Ultra Light';
     width: 100%;
 }
 
+.recently-viewed-container .swiper-button-prev, .recently-viewed-container .swiper-button-next{
+    margin-top: -70px;
+}
+
 .product-list-block .catalog-container .product-list .product-item-li .product-item .color-list .colors-container {
     display: flex;
     flex-wrap: wrap;
@@ -76,8 +102,8 @@ font-family: 'Helvetica Neue Cyr Ultra Light';
 
 
 .product-list-block .catalog-container .product-list .product-item-li .product-item .color-list .colors-container .color-circle {
-    width: 33px;
-    height: 33px;
+    width: 27px;
+    height: 27px;
     margin: 0;
 }
 
@@ -124,7 +150,7 @@ font-family: 'Helvetica Neue Cyr Ultra Light';
         z-index: 1000;
         padding: 30px;
         left: 0px;
-        width: 90%;
+        width: 80%;
         height: 100%;
         min-height: 800px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
