--- a/client/src/common/Modal.css
+++ b/client/src/common/Modal.css
@@ -23,6 +23,11 @@
   border-radius: 0;
 }
 
+.modal-content.border{
+  border: 3px solid;
+  border-radius: 4px;
+}
+
 .modal-close {
   position: absolute;
   top: 10px;
