--- a/client/src/components/atomic/atoms/Cart/TotalCost/TotalCost.css
+++ b/client/src/components/atomic/atoms/Cart/TotalCost/TotalCost.css
@@ -10,6 +10,13 @@
     margin-left: 30px;
 }
 
+.old-price {
+    text-decoration: line-through;
+    color: gray;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
 @media (max-width:768px) {
     .total-price-block{
         justify-content: space-between;
