--- a/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
@@ -9,6 +9,26 @@
   right: 7px;
 }
 
+.heart-button-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 287px;
+  height: 55px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid;
+  color: rgb(0, 0, 0);
+  margin-top: 45px;
+  font-size: 21px;
+}
+
+.heart-button-container.liked{
+  background-color: rgb(0, 0, 0);
+
+  color: rgb(255, 255, 255);
+}
+
 .heart-container img {
   cursor: pointer;
   transition: filter 0.3s;
@@ -23,6 +43,11 @@
 
 
 @media (max-width:768px) {
+  .heart-button-container {
+    width: 100%;
+    font-size: 12px;
+    height: 42px;
+}
   .product-item.main-page .heart-container {
     width: 20px;
     height: 20px;
