--- a/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
+++ b/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
@@ -19,6 +19,7 @@
   width: 100%;
 }
 
+
 .carousel-wrapper {
   overflow-x: auto;
   scroll-behavior: smooth;
@@ -37,7 +38,7 @@
 
 .product-item.main-page {
   
-  width: 100%;
+  width: 94%;
   position: relative;
   margin-left: 24px;
   margin-top: 0;
@@ -100,6 +101,9 @@
   flex-wrap: wrap;
   justify-content: start; /* Или space-between */
   gap: 10px; /* Одинаковое расстояние между элементами */
+  height: auto;
+  padding-bottom: 12px;
+  margin-left: 8px;
 }
 
 
@@ -109,13 +113,13 @@
 
 @media (max-width: 1360px) {
   .product-item.main-page{
-    width: 100%;
+    width: 94%;
   }
 }
 
 @media (max-width: 1130px) {
   .product-item.main-page {
-      width: 100%;
+      width: 94%;
   }
 }
 
