--- a/client/src/components/atomic/atoms/Cart/Input/PromocodeInput.css
+++ b/client/src/components/atomic/atoms/Cart/Input/PromocodeInput.css
@@ -2,10 +2,13 @@
     width: 250px;
     padding: 11px 0 11px 9px;
     font-size: 18px;
+    margin-left: 27px;
+    margin-right: 27px;
 }
 
 @media (max-width:768px) {
     .promocode-input{
+        margin: 0;
         width: 190px;
         font-size: 12px;
         height: 30px;
