--- a/client/src/components/atomic/atoms/atomsProduct/Button/Button.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Button/Button.css
@@ -23,6 +23,13 @@
     border: 2px solid;
 }
 
+.add-to-cart-btn-with-txt.disabled {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+
 @media (max-width:768px) {
     .add-to-cart-btn img{
         width: 10px;
