--- a/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
@@ -43,6 +43,7 @@
 }
 
 .isNotAvailability {
+    display: none;
     position: relative;
     opacity: 0.5; /* Полупрозрачность */
     cursor: not-allowed; /* Указываем, что элемент недоступен */
