--- a/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
+++ b/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
@@ -1,9 +1,12 @@
 .promocode-form{
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 42px;
     font-size: 21px;
+    width: max-content;
+    
 }
 
 @media (max-width:768px) {
