--- a/client/src/components/atomic/molecules/UserProfileInfoForm/ContactInfo/ContactInfo.css
+++ b/client/src/components/atomic/molecules/UserProfileInfoForm/ContactInfo/ContactInfo.css
@@ -1,23 +1,43 @@
-.contact-info-inputs-profile{
+.contact-info-inputs-profile {
     margin-top: 0px;
 }
 
-.contact-info-contacts, .contact-info-full-name{
+.contact-info-contacts,
+.contact-info-full-name {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.contact-info-contacts{
+.contact-info-contacts {
     margin-top: 21px;
 }
 
-.contact-info-head{
+.contact-info-head {
     font-size: 24px;
 }
 
+.error-message {
+    color: red;
+    font-size: 14px;
+    animation: fadeOut 3s forwards;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 @media (max-width:1480px) {
-    .contact-info-full-name, .contact-info-contacts{
+
+    .contact-info-full-name,
+    .contact-info-contacts {
         justify-content: space-between;
     }
 }
