--- a/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
+++ b/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
@@ -62,6 +62,18 @@
     margin-top: 3px;
 }
 
+@media (max-width: 1100px) {
+    .right-header-el .header-label {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 900px) {
+    .right-header-el .header-label {
+        display: none;
+    }
+}
+
 @media (max-width: 768px) {
 
     .right-header-el .header-label {
