--- a/client/src/components/atomic/organisms/productItem/ProductItem.css
+++ b/client/src/components/atomic/organisms/productItem/ProductItem.css
@@ -32,7 +32,7 @@
     margin-top: 190px;
 }
 
-.product-page-container .modal-overlay{
+.product-page-container .modal-overlay {
     z-index: 1400;
 }
 
@@ -42,20 +42,20 @@
     justify-content: start;
     align-items: center;
     cursor: pointer;
-    position:relative;
+    position: relative;
 }
 
-.product-modal-btns{
+.product-modal-btns {
     display: flex;
     justify-content: space-between;
     margin-top: 45px;
 }
 
-.product-modal-btns .cart-button{
+.product-modal-btns .cart-button {
     border: 2px solid;
 }
 
-.product-modal-btns .cart-button.tocart{
+.product-modal-btns .cart-button.tocart {
     border: 2px solid;
     background-color: black;
     color: white;
@@ -65,26 +65,30 @@
     margin-top: 21px;
 }
 
-.product-modal-btns .cart-button.tocart:hover{
+.product-modal-btns .cart-button.tocart:hover {
     border: 2px solid;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
 
-.product-page-data-block {
+.product-page-data-block-els {
     display: flex;
     justify-content: space-between;
 }
 
+.product-page-data-block {}
+
 .product-page-data-block .product-item {
-    width: 50%;
+    width: 45%;
     margin: 0;
-    margin-left: 60px;
+    margin-left: 30px;
+
 }
 
 .product-page-data-block .product-item .cost-addBtn .cost-block .price {
     font-size: 27px;
     margin-top: 21px;
+    font-weight: 600;
 }
 
 .product-page-data-block .product-item .cost-addBtn .cost-block .discount-price {
@@ -206,12 +210,30 @@
     }
 }
 
+@media (max-width: 1030px) {
+    .product-page-data-block .product-item{
+        width: 30%;
+      }
+    .product-page-container{
+      width: 97%;
+    }
+  }
+
 
 @media (max-width: 768px) {
+
+    .product-page-container{
+        width: 90%;
+      }
+    .product-page-data-block-els{
+        display: block;
+    }
+    
     .product-image img {
         width: 100%;
         height: 200px;
     }
+
     .product-page-container .product-page-data-block .heart-container {
         left: auto;
         top: 50px;
@@ -340,10 +362,17 @@
     }
 }
 
-@media (min-width: 2420px) {
+/* @media (min-width: 2420px) {
     .product-page-container {
       width: 100%;
       max-width: calc(1920px + 510px);
       padding: 0 355px !important;
     }
-  }
+  } */
+
+@media (min-width: 1900px) {
+    .product-page-data-block {
+        width: 70%;
+        margin: 0 auto;
+    }
+}
